tests/negative/gold/static4_test.gold
tests/negative/static4_test.toit:4:10: error: Operators may not be static
  static operator == other:
         ^~~~~~~~~~~
Compilation failed.
